[gd_scene load_steps=51 format=3 uid="uid://bmpt13tisf6mq"]

[ext_resource type="Script" path="res://scripts/AI/enemy_agent.gd" id="1_yk70r"]
[ext_resource type="Script" path="res://scripts/AI/enemy_actions.gd" id="2_gni4g"]
[ext_resource type="Script" path="res://scripts/AI/ActionSlots/as_hit.gd" id="3_5pj2u"]
[ext_resource type="Script" path="res://scripts/Damageable/attack_object.gd" id="3_qqejo"]
[ext_resource type="Script" path="res://scripts/AI/avoid_obstacle.gd" id="5_xmx04"]
[ext_resource type="PackedScene" uid="uid://bv4rxlhd6q4im" path="res://scenes/beehave-trees/SlimeEnemy.tscn" id="9_2gh7b"]
[ext_resource type="Script" path="res://scripts/AI/ground_check.gd" id="9_wjhlj"]
[ext_resource type="Script" path="res://scripts/AI/ai_senses.gd" id="10_ts6rw"]
[ext_resource type="Script" path="res://addons/beehave/blackboard.gd" id="10_xjgab"]
[ext_resource type="Script" path="res://scripts/AI/damageable_settings.gd" id="11_deynq"]
[ext_resource type="Script" path="res://scripts/Damageable/agent_damageable.gd" id="11_oj50g"]
[ext_resource type="Script" path="res://scripts/misc/hit_flash.gd" id="13_o4ngg"]
[ext_resource type="Script" path="res://scripts/misc/shadow_caster.gd" id="14_1kjit"]
[ext_resource type="Material" uid="uid://b6ros7h2rxv3s" path="res://assets/materials/red_overlay.tres" id="14_28x42"]
[ext_resource type="Material" uid="uid://dpodxrkgsgipw" path="res://assets/materials/slime.material" id="14_i5agv"]
[ext_resource type="Shader" path="res://assets/shaders/crumble.gdshader" id="14_x4nof"]
[ext_resource type="Script" path="res://scripts/AI/death_helper.gd" id="15_5jx1u"]
[ext_resource type="Material" uid="uid://mqiw67hqph8o" path="res://assets/materials/shadow.tres" id="15_fr34s"]
[ext_resource type="Material" uid="uid://cj4jr6crcu1gc" path="res://assets/materials/transparent.tres" id="17_a2ku2"]
[ext_resource type="PackedScene" uid="uid://dl7svrey4buhx" path="res://assets/models/slime.glb" id="19_n114a"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_fcs3r"]
rough = true
absorbent = true

[sub_resource type="SphereShape3D" id="SphereShape3D_oo4jn"]
radius = 0.328706

[sub_resource type="Resource" id="Resource_8svde"]
script = ExtResource("3_qqejo")
damage_type = 1
damage = 1
override_knockback = false
knockback = 3.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gjr7x"]
animation = &"attack2"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ox84b"]
animation = &"die"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7itff"]
animation = &"attack1"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_y31fc"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_upi4i"]
animation = &"walk"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_1y5d5"]
blend_point_0/node = SubResource("AnimationNodeAnimation_y31fc")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_upi4i")
blend_point_1/pos = 0.5
max_space = 3.0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gxk2n"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xosbb"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_13non"]
xfade_time = 0.1
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_br4eg"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7nna6"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ly56o"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_fw2yg"]
states/Start/position = Vector2(198.667, 94.9627)
states/attack_1/node = SubResource("AnimationNodeAnimation_gjr7x")
states/attack_1/position = Vector2(407.407, -40)
states/die/node = SubResource("AnimationNodeAnimation_ox84b")
states/die/position = Vector2(565.333, -49.3333)
states/hit/node = SubResource("AnimationNodeAnimation_7itff")
states/hit/position = Vector2(572.888, 110.667)
states/walk/node = SubResource("AnimationNodeBlendSpace1D_1y5d5")
states/walk/position = Vector2(407, 101.222)
transitions = ["Start", "walk", SubResource("AnimationNodeStateMachineTransition_gxk2n"), "walk", "attack_1", SubResource("AnimationNodeStateMachineTransition_xosbb"), "attack_1", "walk", SubResource("AnimationNodeStateMachineTransition_13non"), "walk", "die", SubResource("AnimationNodeStateMachineTransition_br4eg"), "walk", "hit", SubResource("AnimationNodeStateMachineTransition_7nna6"), "hit", "walk", SubResource("AnimationNodeStateMachineTransition_ly56o")]
graph_offset = Vector2(-212, -60)

[sub_resource type="BoxShape3D" id="BoxShape3D_2sfjd"]
size = Vector3(0.222366, 0.143632, 0.214539)

[sub_resource type="BoxShape3D" id="BoxShape3D_lr303"]
size = Vector3(0.534424, 0.537079, 0.609009)

[sub_resource type="SphereShape3D" id="SphereShape3D_8r8o2"]
radius = 11.0

[sub_resource type="Resource" id="Resource_ckng0"]
script = ExtResource("11_deynq")
damage_mult_in_vulnerable = 1.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ql85j"]
radius = 0.345879
height = 0.986866

[sub_resource type="QuadMesh" id="QuadMesh_uf0ca"]
material = ExtResource("15_fr34s")
size = Vector2(0.7, 0.7)
orientation = 1

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_vwum4"]

[sub_resource type="Gradient" id="Gradient_t3ewy"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_3xb2r"]
noise_type = 3
frequency = 0.0584
fractal_octaves = 2
domain_warp_enabled = true
domain_warp_amplitude = 17.205

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_mykos"]
width = 128
height = 128
color_ramp = SubResource("Gradient_t3ewy")
noise = SubResource("FastNoiseLite_3xb2r")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c06cb"]
resource_local_to_scene = true
render_priority = -10
shader = ExtResource("14_x4nof")
shader_parameter/alpha = 0.0
shader_parameter/alpha_clip = 1.0
shader_parameter/effect_start_time = 0.0
shader_parameter/noise_uv_offset = Vector2(0, 0)
shader_parameter/main_tex = SubResource("CompressedTexture2D_vwum4")
shader_parameter/noise_tex = SubResource("NoiseTexture2D_mykos")

[sub_resource type="Animation" id="Animation_6vqk1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:dead_material:shader_parameter/alpha_clip")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:dead_material:shader_parameter/noise_uv_offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_w16ud"]
resource_name = "crumble"
length = 12.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:dead_material:shader_parameter/alpha_clip")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 4.1, 5.8, 10.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [1.0, 1.0, 0.0, 0.0, 1.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(4.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"a_hide_main"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:dead_material:shader_parameter/noise_uv_offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 10.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cl3h6"]
_data = {
"RESET": SubResource("Animation_6vqk1"),
"crumble": SubResource("Animation_w16ud")
}

[node name="Slime-agent" type="RigidBody3D" node_paths=PackedStringArray("damageable")]
collision_layer = 2
collision_mask = 255
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
physics_material_override = SubResource("PhysicsMaterial_fcs3r")
gravity_scale = 2.0
freeze_mode = 1
custom_integrator = true
script = ExtResource("1_yk70r")
normal_speed = 2.5
acceleration = 2.0
turn_speed = 4.0
enable_slide = true
normal_friction = 0.4
use_groundcheck = true
wander_radius = 10.0
damageable = NodePath("Damageable")

[node name="Characterbody-Shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.325911, 0)
shape = SubResource("SphereShape3D_oo4jn")

[node name="Actions" type="Node" parent="." node_paths=PackedStringArray("attack_1_hitbox", "self_collider", "hit_action_slot")]
script = ExtResource("2_gni4g")
attack_1_hitbox = NodePath("../AttackBox")
attack_1_object = SubResource("Resource_8svde")
self_collider = NodePath("../Damageable")
default_animation_name = &"walk"
hit_action_slot = NodePath("AS_Hit")

[node name="Timer" type="Timer" parent="Actions"]
one_shot = true

[node name="AS_Hit" type="Node" parent="Actions"]
script = ExtResource("3_5pj2u")
hit_recover_time = 0.45
hit_recovery_i_frames = true
hit_knockback = 2.0
stop_think_during_recovery = true
enable_repeat_timer = true
repeat_time = 1.2

[node name="HitRecoveryRepeatTimer" type="Timer" parent="Actions/AS_Hit"]

[node name="Cooldown" type="Timer" parent="Actions"]
one_shot = true

[node name="SecondaryCooldown" type="Timer" parent="Actions"]
one_shot = true

[node name="ObstacleRaycasts" type="Node3D" parent="."]

[node name="LeftRaycast" type="RayCast3D" parent="ObstacleRaycasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.257597, 0.294351, -0.00171073)
target_position = Vector3(0, 0, -1)
collision_mask = 23
script = ExtResource("5_xmx04")

[node name="MiddleRaycast" type="RayCast3D" parent="ObstacleRaycasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00790547, 0.296183, -0.226121)
target_position = Vector3(0, 0, -0.75)
collision_mask = 23
script = ExtResource("5_xmx04")
raycastType = 1

[node name="RightRaycast" type="RayCast3D" parent="ObstacleRaycasts"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.262419, 0.296183, -0.00564736)
target_position = Vector3(0, 0, -1)
collision_mask = 23
script = ExtResource("5_xmx04")
raycastType = 2

[node name="AnimationTree" type="AnimationTree" parent="."]
deterministic = false
root_node = NodePath("../slime2")
callback_mode_process = 0
callback_mode_method = 1
tree_root = SubResource("AnimationNodeStateMachine_fw2yg")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../slime2/AnimationPlayer")
parameters/walk/blend_position = 0.037272

[node name="BHTree" parent="." node_paths=PackedStringArray("blackboard", "actor") instance=ExtResource("9_2gh7b")]
actor_node_path = NodePath("..")
blackboard = NodePath("../Blackboard")
actor = NodePath("..")

[node name="Blackboard" type="Node" parent="."]
script = ExtResource("10_xjgab")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_desired_distance = 0.5
path_height_offset = -0.01
path_max_distance = 1.01
radius = 0.7
neighbor_distance = 10.0
max_neighbors = 3
time_horizon_obstacles = 1.0
max_speed = 20.0
avoidance_priority = 0.0
debug_enabled = true

[node name="AgentAudio" type="Node3D" parent="."]

[node name="Actions" type="AudioStreamPlayer3D" parent="AgentAudio"]
volume_db = 11.029
autoplay = true
max_distance = 50.0
max_polyphony = 3
panning_strength = 1.5

[node name="GroundCheck" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 21
input_ray_pickable = false
priority = 1
script = ExtResource("9_wjhlj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="GroundCheck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000114441, 0.0263278, -3.05176e-05)
shape = SubResource("BoxShape3D_2sfjd")

[node name="AttackBox" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 512
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="AttackBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00573737, 0.266525, -0.45636)
shape = SubResource("BoxShape3D_lr303")

[node name="Senses" type="Area3D" parent="." node_paths=PackedStringArray("self_collider")]
collision_layer = 0
collision_mask = 512
monitorable = false
script = ExtResource("10_ts6rw")
self_collider = NodePath("../Damageable")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Senses"]
shape = SubResource("SphereShape3D_8r8o2")

[node name="Damageable" type="Area3D" parent="."]
collision_layer = 512
collision_mask = 512
monitoring = false
script = ExtResource("11_oj50g")
settings = SubResource("Resource_ckng0")
max_health = 5

[node name="Hitbox" type="CollisionShape3D" parent="Damageable"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.21952, 0)
shape = SubResource("CapsuleShape3D_ql85j")

[node name="HitFlash" type="Timer" parent="Damageable"]
process_mode = 1
script = ExtResource("13_o4ngg")
models_path = Array[NodePath]([NodePath("../../slime2/slime/Skeleton3D/slime-mesh")])
time = 0.2
flash_mat = ExtResource("14_28x42")

[node name="ShadowCaster" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.151654, 0.00334776)
target_position = Vector3(0, -10, 0)
collision_mask = 15
script = ExtResource("14_1kjit")

[node name="shadow" type="MeshInstance3D" parent="ShadowCaster"]
layers = 16
mesh = SubResource("QuadMesh_uf0ca")

[node name="DeathHelper" type="Timer" parent="."]
process_mode = 1
process_callback = 0
wait_time = 14.0
one_shot = true
script = ExtResource("15_5jx1u")
mesh_path = NodePath("../slime2/slime/Skeleton3D/slime-mesh")
dead_material = SubResource("ShaderMaterial_c06cb")
transparent_material = ExtResource("17_a2ku2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="DeathHelper"]
libraries = {
"": SubResource("AnimationLibrary_cl3h6")
}

[node name="slime2" parent="." instance=ExtResource("19_n114a")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="slime2/slime" index="0"]
bones/0/rotation = Quaternion(-2.98023e-08, 1.19209e-07, -2.11758e-22, 1)
bones/1/scale = Vector3(0.999449, 1.00068, 1.00121)
bones/2/position = Vector3(2.04441e-09, 0.142521, -0.00754588)
bones/2/rotation = Quaternion(-0.0147722, -2.5965e-19, -4.76521e-09, 0.999891)

[node name="slime-mesh" parent="slime2/slime/Skeleton3D" index="0"]
surface_material_override/0 = ExtResource("14_i5agv")

[connection signal="timeout" from="Actions/Timer" to="." method="new_wander_target"]
[connection signal="timeout" from="Actions/Cooldown" to="." method="_cooldown_complete"]
[connection signal="timeout" from="Actions/SecondaryCooldown" to="." method="_seconday_cooldown_complete"]
[connection signal="body_entered" from="GroundCheck" to="GroundCheck" method="_on_body_entered"]
[connection signal="body_exited" from="GroundCheck" to="GroundCheck" method="_on_body_exited"]
[connection signal="area_entered" from="Senses" to="Senses" method="_on_area_entered"]
[connection signal="area_exited" from="Senses" to="Senses" method="_on_area_exited"]
[connection signal="timeout" from="Damageable/HitFlash" to="Damageable/HitFlash" method="end_effect"]

[editable path="slime2"]
